--- a/views/regis.html
+++ b/views/regis.html
@@ -2,8 +2,20 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<title>Register-AirCombat</title>
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Register-AirCombat</title>
+    <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
+    <style type="text/css">
+        .tc{text-align: center;
+            font-size: 30px;
+            font-weight: 600;}
+        .col-center-block {
+            float: none;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        </style>
 </head>
 <body>
 	<div class="container">
@@ -50,3 +62,7 @@
             </fieldset>
         </form>
     </div>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
+    <script src="javascripts/bootstrap.min.js"></script>
+</body>
+</html>
