--- a/views/login.html
+++ b/views/login.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Register-AirCombat</title>
-    <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
+    <link rel="stylesheet" href="../stylesheets/bootstrap.min.css">
     <style type="text/css">
         .tc{text-align: center;
             font-size: 30px;
@@ -64,6 +64,6 @@
         </form>
     </div>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
-    <script src="javascripts/bootstrap.min.js"></script>
+    <script src="../javascripts/bootstrap.min.js"></script>
 </body>
 </html>
