start impletenting user database

--- a/views/homepage.html
+++ b/views/homepage.html
@@ -4,4 +4,6 @@
         <meta charset="utf-8">
         <title>AirCombat_game_center</title>
     </head>
+    <body background="../img/index_bg.jpg">
+    </body>
 </html>
