--- a/views/index.html
+++ b/views/index.html
@@ -20,7 +20,7 @@
         <input type="button" id="btn2" class="login" value="Sign up" onclick="javascript:window.location.href='/regis'" />
         </div>
         <div align="center">
-        <input type="button" id="submit" class="enter" value="Play Game" onclick="javascript:window.location.href='/home_page'" />
+        <input type="button" id="submit" class="enter" value="Play Game" onclick="javascript:window.location.href='/homepage'" />
         </div>
     <!--/div-->
 </body>
