--- a/views/homepage.html
+++ b/views/homepage.html
@@ -6,7 +6,7 @@
     </head>
     <body background="../img/index_bg.jpg">
         <h1 align="center">Welcome to AirCombat, <%= user.name %>!</h1>
-        <p align="center">Our server is under maintainance, come back later</p>
+        <h1 align="center">Our server is under maintainance, please come back later</h1>
         <p align="center"><a href="/logout">log out</a>
         </p>
     </body>
