--- a/views/regis.html
+++ b/views/regis.html
@@ -93,7 +93,7 @@
                 else if(username.length < 6 || password1.length < 6) {
                     alert("The length of username/password should be longer than 6!");
                 }
-                else if(regLetter.test(username) || regLetter.test(password1)) {
+                else if(!regLetter.test(username) || !regLetter.test(password1)) {
                     alert("Username/Password should contain at least one letter!");
                 }
                 else if(password1!==password2){
