game page revised
user interface revision

--- a/views/homepage.html
+++ b/views/homepage.html
@@ -24,7 +24,7 @@
         <div id="main">
             <div id="topinfo">
                 <div id="top_left">
-                    <img id="max_score_icon" src="../img/max_score.png"> <br/><br/>
+                    <img id="max_score_icon" src="../img/highest_score.png"> <br/><br/>
                     
                     <div id="max_score">
                         <img id="max_socre_number" src="../img/0.png">
@@ -33,15 +33,17 @@
                 </div>
 
                 <div id="score">
+                        <img id="score_icon" src="../img/score.png"> <br/><br/>
+
                     <img id="score_number" src="../img/0.png">
                 </div>
             </div>
 
             <div id="bottominfo">
                 <div id="hp_view">
-                    <img id="hp_img" src="../img/hp_icon.png">
+                    <img id="hp_img" src="../img/health_icon.png">
                     <div id="hp_box">
-                        <div id="current_hp" style="width: 75px"></div>
+                        <div id="current_hp" style="width: 200px"></div>
                     </div>
                 </div>
 
@@ -53,7 +55,7 @@
             
         </div>
 
-        <div id="game_over" style="display: block">
+        <div id="game_over" style="display: none">
             
         </div>
     </body>
