--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -54,7 +54,8 @@ body {
     left: 50%;
     top: 50%;
     transform: translate(-50%,-50%);
-    background: url('../img/volcano_1.png');
+    /* background: url('../img/volcano_1.png'); */
+    background: url('../img/scenes/sky.jpg');
     background-repeat: repeat-y;
     z-index: 1;
 }
@@ -73,24 +74,33 @@ body {
 
 #max_score_icon {
     float: left;
-    width: 120px;
-    height: 34px;   
+    width: 165px;
+    height: 65px;   
 }
 
 #max_score {
     float: left;
-    display: block;
+   /* display: block; */
+  /* margin-top: 5px;*/
+   margin-left: 15px;
+   margin-bottom: 10px;
 }
 
 #max_socre_number {
     float: left;
-    width: 18px;
+    width: 20px;
+}
+
+#score_icon {
+    float: right;
+    width: 145px;
+    height: 55px;
 }
 
 #score {
     float: right;
     margin-top: 10px;
-    margin-left: 10px;
+    margin-right: 30px;
     margin-right: 10px;
     margin-bottom: 10px;
 }
@@ -98,41 +108,42 @@ body {
 #score_number{
     float: right;
     width: 20px;
+    margin-right: 30px;
 }
 
 #bottominfo { /* div which contains user's hp(left) and pause, restart buttons(right) */
     overflow: hidden;
     width: inherit;
-    margin-top: 780px;
+    margin-top: 746px;
     border: 1px solid #000;
 }
 
 #hp_view { /* user's hp */
     float: left;
-    width: 150px;
+    width: 220px;
     overflow: hidden;
     padding-left: 10px;
 }
 
 #hp_img {
     float: left;
-    width: 25px;
-    margin-top: 10px;
+    width: 55px;
+    margin-top: 7px;
     margin-right: 10px;
     margin-bottom: 10px;
 }
 
 #hp_box {
     float: left;
-    width: 100px;
-    height: 10px;
+    width: 150px;
+    height: 20px;
     border: 2px solid #964a2c;
-    margin-top: 25px;
+    margin-top: 20px;
 }
 
 #current_hp {
-    width: 100px;
-    height: 10px;
+    width: 150px;
+    height: 20px;
     background: #ec4f00;
 }
 
