--- a/views/index.html
+++ b/views/index.html
@@ -16,11 +16,14 @@
         </div>
     </form>
         <div>
-        <input type="button" id="btn1" class="login" value="Sign in" onclick="javascript:window.location.href='/login'" />
-        <input type="button" id="btn2" class="login" value="Sign up" onclick="javascript:window.location.href='/regis'" />
+            <img src = "../img/signin.png" id="btn1" class="login" onclick="javascript:window.location.href='/login'">
+        </div>
+            <img src = "../img/signup.png" id="btn2" class="login" onclick="javascript:window.location.href='/regis'">
+        </div>
         </div>
         <div align="center">
-        <input type="button" id="submit" class="enter" value="Play Game" onclick="javascript:window.location.href='/homepage'" />
+            <img src = "../img/play.png" id="submit" class="enter" onclick="javascript:window.location.href='/homepage'">
+        </div>
         </div>
     <!--/div-->
 </body>
