--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -74,8 +74,9 @@ body {
 
 #max_score_icon {
     float: left;
-    width: 165px;
-    height: 65px;   
+    margin-top: 10px;
+    width: 200px;
+    height: 30px;
 }
 
 #max_score {
@@ -88,21 +89,19 @@ body {
 
 #max_socre_number {
     float: left;
+    margin-top: 10px;
     width: 20px;
 }
 
 #score_icon {
     float: right;
-    width: 145px;
-    height: 55px;
+    width: 80px;
+    height: 30px;
 }
 
 #score {
     float: right;
     margin-top: 10px;
-    margin-right: 30px;
-    margin-right: 10px;
-    margin-bottom: 10px;
 }
 
 #score_number{
@@ -179,5 +178,3 @@ body {
     transform: translate(-50%,-50%);
     background: rgba(0, 0, 0, 0.6);
 }
-
-
