added plane logo

--- a/views/index.html
+++ b/views/index.html
@@ -11,6 +11,9 @@
 <body background="../img/index_bg.jpg">
     <!--div class = "div1"-->
     <form action="" method="GET" id="register">
+      <div align="center">
+          <img src = "../img/logo.png" class="plane">
+      </div>
         <div align="center">
             <img src = "../img/index_logo.png" class="logo">
         </div>
