--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -58,9 +58,14 @@ label {
   width: 600px;
   margin-left:auto;
   margin-right:auto;
-  margin-top:25%;
+  margin-top:10%;
 }
 
+.plane {
+  margin-left:auto;
+  margin-right:auto;
+  margin-top:15%;
+}
 /*#btn1 {
     float: left;
     margin-left: 20%;
