--- a/views/homepage.html
+++ b/views/homepage.html
@@ -1,64 +1,55 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>AirCombat_game_center</title>
-        <link href="../stylesheets/game.css" rel="stylesheet" type="text/css">
-    </head>
-    <body background="../img/index_bg.jpg">
-        <div id="container"></div>
+	<head>
+		<meta charset="utf-8" />
+		<title>AirCombat_beta</title>
+		<link href="../stylesheets/game.css" rel="stylesheet" type="text/css">
+	</head>
+	
+	<body background="../img/index_bg.jpg">
+		<div id="start_page">
+			<img id="start" src="../img/start.png"/>
+		</div>
+		
+		<div id="battleground">
+		</div>
+		
+		<div id="main">
+			<div id="topinfo">
+				<div id="max">
+					<img id="max_score_icon" src="../img/highest_score.png"/><br/><br/><br/>
+					<div id="max_score">
+					</div>
+				</div>
+				<div id="paused">
+				</div>
+				<img id="score_icon" src="../img/score.png"><br/><br/>
+				<div id="score">
+				</div>	
+			</div>
 
-        <div id="userinfo">
-            <div class="info1">*** <%= user.name %> ***  
-                <span id="username"><a href="/logout">Sign out</a></span>
-            </div>
-        </div>
+			<div id="botinfo">
+				<div id="hp_view">
+					<img id="hp_icon" src="../img/health_icon.png"/>
+					<div id="user_hp_view">
+						<div id="current_hp">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
-        <div id="start_page" style="display: none">
-            <div id="start">
-                <img id="start_button" src="../img/start_game.png">
-            </div>
-        </div>
+		<img id="damage" src="../img/damage.png"/>
 
-        <div id="main">
-            <div id="topinfo">
-                <div id="top_left">
-                    <img id="max_score_icon" src="../img/highest_score.png"> <br/><br/>
-                    
-                    <div id="max_score">
-                        <img id="max_socre_number" src="../img/0.png">
-                    </div>
-
-                </div>
-
-                <div id="score">
-                        <img id="score_icon" src="../img/score.png"> <br/><br/>
-
-                    <img id="score_number" src="../img/0.png">
-                </div>
-            </div>
-
-            <div id="bottominfo">
-                <div id="hp_view">
-                    <img id="hp_img" src="../img/health_icon.png">
-                    <div id="hp_box">
-                        <div id="current_hp" style="width: 200px"></div>
-                    </div>
-                </div>
-
-                <div id="tools">
-                    <img id="restart" src="../img/restart.png">
-                    <img id="pause" src="../img/pause.png">
-                </div>
-            </div>    
-            
-        </div>
-
-        <div id="game_over" style="display: none">
-            
-        </div>
-    </body>
+		<div id="game_over">
+			<div id="over_title"><img id="over_titleImg_0" src="../img/nice_try.png"/></div>
+			<div id="over_score"></div>
+			<div id="restart">
+				<img src="../img/restart.png"/>
+			</div>
+		</div>
+		<input type="button" name="" id="consoleGame" value="PLAY"/>
+		<script src="../javascripts/game.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../javascripts/cookie.js" type="text/javascript" charset="utf-8"></script>
+	</body>
 </html>
-
-
