--- a/views/login.html
+++ b/views/login.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Register-AirCombat</title>
+    <title>Log in-AirCombat</title>
     <link rel="stylesheet" href="../stylesheets/bootstrap.min.css">
     <!--overwrite css format of bootstrap-->
     <style type="text/css">
