--- a/views/index.html
+++ b/views/index.html
@@ -2,13 +2,14 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;" charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>AirCombat</title>
     <link href="../stylesheets/index.css" rel="stylesheet" type="text/css" />
 </head>
 </script>
 
 
-<body background="../img/index_bg.jpg">
+<body>
     <!--div class = "div1"-->
     <form action="" method="GET" id="register">
         <div align="center">
