--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,3 +1,16 @@
+html {
+    width: 100%;
+    height: 100%;
+    margin: 0%;
+}
+
+body {
+    background: url("../img/index_bg.jpg");
+    width: 100%;
+    height: 100%;
+    margin: 0%;
+}
+
 form {
     width: 800px;
     margin: 0 auto;
