--- a/views/login.html
+++ b/views/login.html
@@ -34,7 +34,7 @@
 	<fieldset>
 		<div class="panel panel-default>
 		<div class="panel-heading">
-                    <p class="tc">Log in</p>
+                    <p class="tc">Sign in</p>
                 </div>
                 <div class="panel-body m15">
                 <div class="form-group">
@@ -57,7 +57,7 @@
                         <button type="button" class="btn btn-primary btn-block" id="login">login</button>
                 </div>
                 <div class="form-group">
-                        <button type="button" class="btn btn-info col-sm-2 col-sm-offset-10" id="register">Register</button>
+                        <button type="button" class="btn btn-info col-sm-2 col-sm-offset-10" id="register">register</button>
                 </div>
                 </div>
                 </div>
@@ -66,7 +66,7 @@
     </div>
     <script src="../javascripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="javascripts/jquery.min.js"></script>
-    <script type="text/javascript" >
+    <script type="text/javascript">
         $(function(){ 
             $('#login').click(function(){
                 var username=$('#username').val();
@@ -74,6 +74,7 @@
                 var data={'username':username,'password':password};
                 if(!username){
                     alert("Empty username not allowed!");
+                    document.getElementById("username").focus();
                 }
                 else { 
                     $.ajax({
@@ -87,7 +88,7 @@
                         },
                         error:function(data,err){
                             alert("Wrong username or password!");
-                            location.href='login';
+                            document.getElementById("password").focus();
                         }
                     })   
                 }
@@ -96,6 +97,12 @@
                 location.href='regis'; 
             });
         })
+        document.onkeydown = function(e) {
+            e = e || window.event;
+            if(e.keyCode == 13) {
+                document.getElementById("login").click();
+            }
+        } 
     </script>
 </body>
 </html>
